--- a/client/src/layouts/tracker.css
+++ b/client/src/layouts/tracker.css
@@ -48,8 +48,6 @@ a, a:hover, a:focus {
     background: #494D5F;
 }
 
-
-
 #sidebar ul li{
     list-style: none;
 }
@@ -100,3 +98,7 @@ a, a:hover, a:focus {
     margin: 5px auto;
 }
 
+#content {
+    width: 100%;
+    height: 100vh;
+}
